# order-stock-market

./: .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
server/: manage.py
server/orders/: models.py  serializers.py  urls.py  views.py
server/orders/migrations/: 0001_initial.py
server/orders/tests/: conftest.py  test_views.py
server/stocks/: asgi.py  settings.py  urls.py  wsgi.py
